--- a/templates/home.html
+++ b/templates/home.html
@@ -106,9 +106,9 @@
                         <div class="form-group navbar-form full-width">
                             <select class="form-control navbar-form full-width" name="compuerta">
                                 <option value="and">AND</option>
-                                <option value="and">OR</option>
-                                <option value="and">NAND</option>
-                                <option value="and">NOR</option>
+                                <option value="or">OR</option>
+                                <option value="nand">NAND</option>
+                                <option value="nor">NOR</option>
                             </select>
                         </div>
                     </li>
